--- a/LowerDeck Engine/imgui.ini
+++ b/LowerDeck Engine/imgui.ini
@@ -4,7 +4,7 @@ Size=1280,778
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=381,191
+Pos=491,158
 Size=351,400
 Collapsed=0
 
@@ -26,8 +26,8 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Camera]
-Pos=880,294
-Size=400,96
+Pos=880,56
+Size=400,189
 Collapsed=0
 DockId=0x00000011,0
 
@@ -61,67 +61,75 @@ Collapsed=0
 DockId=0x0000000F,1
 
 [Window][Non-given]
-Pos=880,676
-Size=400,124
+Pos=880,621
+Size=400,179
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][SciFiHelmet]
-Pos=880,535
-Size=400,265
+Pos=880,586
+Size=400,214
 Collapsed=0
 DockId=0x0000000C,0
 
 [Window][Sponza]
-Pos=1520,801
-Size=400,256
+Pos=880,635
+Size=400,165
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][DamagedHelmet]
-Pos=880,640
-Size=400,160
+Pos=880,669
+Size=400,131
 Collapsed=0
 DockId=0x0000000E,0
 
 [Window][Scene properties]
 Pos=880,56
-Size=400,236
+Size=400,307
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Point Lights]
-Pos=880,392
-Size=400,246
+Pos=880,365
+Size=400,219
 Collapsed=0
-DockId=0x00000013,0
+DockId=0x00000015,0
 
 [Window][ballz]
-Pos=1520,959
-Size=400,98
+Pos=880,712
+Size=400,88
 Collapsed=0
 DockId=0x00000014,0
 
+[Window][Unnamed]
+Pos=880,662
+Size=400,138
+Collapsed=0
+DockId=0x00000016,0
+
 [Docking][Data]
-DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,22 Size=1280,778 Split=X
-  DockNode                  ID=0x00000003 Parent=0x8B93E3BD SizeRef=878,778 Split=Y
-    DockNode                ID=0x0000000F Parent=0x00000003 SizeRef=1019,854 CentralNode=1 HiddenTabBar=1 Selected=0xE192E354
-    DockNode                ID=0x00000010 Parent=0x00000003 SizeRef=1019,179 Selected=0x64F50EE5
-  DockNode                  ID=0x00000004 Parent=0x8B93E3BD SizeRef=400,778 Split=Y Selected=0x199AB496
-    DockNode                ID=0x00000005 Parent=0x00000004 SizeRef=259,32 Selected=0x199AB496
-    DockNode                ID=0x00000006 Parent=0x00000004 SizeRef=259,744 Split=Y Selected=0x0545BD69
-      DockNode              ID=0x00000007 Parent=0x00000006 SizeRef=259,236 Selected=0x42F01C48
-      DockNode              ID=0x00000008 Parent=0x00000006 SizeRef=259,506 Split=Y Selected=0x0545BD69
-        DockNode            ID=0x0000000D Parent=0x00000008 SizeRef=259,310 Split=Y Selected=0x0545BD69
-          DockNode          ID=0x0000000B Parent=0x0000000D SizeRef=370,239 Split=Y Selected=0x0545BD69
-            DockNode        ID=0x00000009 Parent=0x0000000B SizeRef=370,312 Split=Y Selected=0x0545BD69
-              DockNode      ID=0x00000011 Parent=0x00000009 SizeRef=370,142 Selected=0x0545BD69
-              DockNode      ID=0x00000012 Parent=0x00000009 SizeRef=370,362 Split=Y Selected=0xD568E0E9
-                DockNode    ID=0x00000001 Parent=0x00000012 SizeRef=400,126 Split=Y Selected=0xD568E0E9
-                  DockNode  ID=0x00000013 Parent=0x00000001 SizeRef=400,287 Selected=0xD568E0E9
-                  DockNode  ID=0x00000014 Parent=0x00000001 SizeRef=400,73 Selected=0xA01DD433
-                DockNode    ID=0x00000002 Parent=0x00000012 SizeRef=400,124 Selected=0x047F20D3
-            DockNode        ID=0x0000000A Parent=0x0000000B SizeRef=370,192 Selected=0x3521BB59
-          DockNode          ID=0x0000000C Parent=0x0000000D SizeRef=370,265 Selected=0xCF7F5689
-        DockNode            ID=0x0000000E Parent=0x00000008 SizeRef=259,144 Selected=0xF643CF48
+DockSpace                     ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,22 Size=1280,778 Split=X
+  DockNode                    ID=0x00000003 Parent=0x8B93E3BD SizeRef=878,778 Split=Y
+    DockNode                  ID=0x0000000F Parent=0x00000003 SizeRef=1019,854 CentralNode=1 HiddenTabBar=1 Selected=0xE192E354
+    DockNode                  ID=0x00000010 Parent=0x00000003 SizeRef=1019,179 Selected=0x64F50EE5
+  DockNode                    ID=0x00000004 Parent=0x8B93E3BD SizeRef=400,778 Split=Y Selected=0x199AB496
+    DockNode                  ID=0x00000005 Parent=0x00000004 SizeRef=259,32 Selected=0x199AB496
+    DockNode                  ID=0x00000006 Parent=0x00000004 SizeRef=259,744 Split=Y Selected=0x0545BD69
+      DockNode                ID=0x00000007 Parent=0x00000006 SizeRef=259,307 Selected=0x42F01C48
+      DockNode                ID=0x00000008 Parent=0x00000006 SizeRef=259,435 Split=Y Selected=0x0545BD69
+        DockNode              ID=0x0000000D Parent=0x00000008 SizeRef=259,363 Split=Y Selected=0x0545BD69
+          DockNode            ID=0x0000000B Parent=0x0000000D SizeRef=370,281 Split=Y Selected=0x0545BD69
+            DockNode          ID=0x00000009 Parent=0x0000000B SizeRef=370,312 Split=Y Selected=0x0545BD69
+              DockNode        ID=0x00000011 Parent=0x00000009 SizeRef=370,150 Selected=0x0545BD69
+              DockNode        ID=0x00000012 Parent=0x00000009 SizeRef=370,165 Split=Y Selected=0xD568E0E9
+                DockNode      ID=0x00000001 Parent=0x00000012 SizeRef=400,126 Split=Y Selected=0xD568E0E9
+                  DockNode    ID=0x00000013 Parent=0x00000001 SizeRef=400,287 Split=Y Selected=0xD568E0E9
+                    DockNode  ID=0x00000015 Parent=0x00000013 SizeRef=400,295 Selected=0xD568E0E9
+                    DockNode  ID=0x00000016 Parent=0x00000013 SizeRef=400,138 Selected=0x53C8B45F
+                  DockNode    ID=0x00000014 Parent=0x00000001 SizeRef=400,73 Selected=0xA01DD433
+                DockNode      ID=0x00000002 Parent=0x00000012 SizeRef=400,124 Selected=0x047F20D3
+            DockNode          ID=0x0000000A Parent=0x0000000B SizeRef=370,192 Selected=0x3521BB59
+          DockNode            ID=0x0000000C Parent=0x0000000D SizeRef=370,274 Selected=0xCF7F5689
+        DockNode              ID=0x0000000E Parent=0x00000008 SizeRef=259,158 Selected=0xF643CF48
 
