--- a/LowerDeck Engine/LowerDeck Engine.vcxproj
+++ b/LowerDeck Engine/LowerDeck Engine.vcxproj
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.props" Condition="Exists('..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.props')" />
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|x64">
       <Configuration>Debug</Configuration>
@@ -99,9 +98,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Engine\D3D\D3D12Adapter.cpp" />
     <ClCompile Include="Engine\D3D\D3D12Buffer.cpp" />
+    <ClCompile Include="Engine\D3D\D3D12Memory.cpp" />
+    <ClCompile Include="Engine\D3D\D3D12PipelineState.cpp" />
+    <ClCompile Include="Engine\D3D\D3D12Texture.cpp" />
     <ClCompile Include="Engine\Graphics\Buffer\Buffer.cpp" />
     <ClCompile Include="Engine\Graphics\Buffer\BufferUtility.cpp" />
+    <ClCompile Include="Engine\Graphics\MipMapGenerator.cpp" />
     <ClCompile Include="Engine\Render\Deferred\DeferredContext.cpp" />
     <ClCompile Include="Engine\D3D\D3D12DepthBuffer.cpp" />
     <ClCompile Include="Engine\D3D\D3D12RootSignature.cpp" />
@@ -139,7 +143,13 @@
     <ClCompile Include="Engine\Render\Lights\PointLights.cpp" />
     <ClCompile Include="Engine\Render\Model\Importer.cpp" />
     <ClCompile Include="Engine\Render\Model\Model.cpp" />
+    <ClCompile Include="Engine\Render\RenderPass\GBufferPass.cpp" />
+    <ClCompile Include="Engine\Render\RenderPass\LightPass.cpp" />
+    <ClCompile Include="Engine\Render\ScreenOutput.cpp" />
+    <ClCompile Include="Engine\Scene\GameObject.cpp" />
     <ClCompile Include="Engine\Utility\FileSystem.cpp" />
+    <ClCompile Include="Engine\Utility\Math.cpp" />
+    <ClCompile Include="Engine\Utility\Utility.cpp" />
     <ClCompile Include="Engine\Window\Window.cpp" />
     <ClCompile Include="Dependencies\ImGui\imgui.cpp">
       <GenerateXMLDocumentationFiles Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</GenerateXMLDocumentationFiles>
@@ -160,14 +170,20 @@
     <ClCompile Include="Engine\Render\Lights\PointLight.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Engine\D3D\D3D12Adapter.hpp" />
     <ClInclude Include="Engine\D3D\D3D12Buffer.hpp" />
     <ClInclude Include="Dependencies\EnTT\entt.hpp" />
+    <ClInclude Include="Engine\D3D\D3D12Memory.hpp" />
+    <ClInclude Include="Engine\D3D\D3D12PipelineState.hpp" />
+    <ClInclude Include="Engine\D3D\D3D12Texture.hpp" />
     <ClInclude Include="Engine\ECS\Entity.hpp" />
     <ClInclude Include="Engine\Graphics\Buffer\Buffer.hpp" />
     <ClInclude Include="Engine\Graphics\Buffer\BufferUtility.hpp" />
     <ClInclude Include="Engine\Graphics\Buffer\ConstantBuffer.hpp" />
     <ClInclude Include="Engine\Graphics\Buffer\ConstantTypes.hpp" />
     <ClInclude Include="Engine\Graphics\Buffer\Vertex.hpp" />
+    <ClInclude Include="Engine\Graphics\MipMapGenerator.hpp" />
+    <ClInclude Include="Engine\Graphics\Shader.hpp" />
     <ClInclude Include="Engine\Render\Deferred\DeferredContext.hpp" />
     <ClInclude Include="Engine\D3D\D3D12DepthBuffer.hpp" />
     <ClInclude Include="Engine\D3D\D3D12RootSignature.hpp" />
@@ -199,8 +215,14 @@
     <ClInclude Include="Engine\Render\Model\Mesh.hpp" />
     <ClInclude Include="Engine\Render\Model\Meshlet.hpp" />
     <ClInclude Include="Engine\Render\Model\Model.hpp" />
+    <ClInclude Include="Engine\Render\RenderPass\GBufferPass.hpp" />
+    <ClInclude Include="Engine\Render\RenderPass\LightPass.hpp" />
+    <ClInclude Include="Engine\Render\ScreenOutput.hpp" />
+    <ClInclude Include="Engine\Scene\GameObject.hpp" />
     <ClInclude Include="Engine\Utility\FileSystem.hpp" />
+    <ClInclude Include="Engine\Utility\Math.hpp" />
     <ClInclude Include="Engine\Utility\MemoryUsage.hpp" />
+    <ClInclude Include="Engine\Utility\Singleton.hpp" />
     <ClInclude Include="Engine\Utility\Timer.hpp" />
     <ClInclude Include="Engine\Utility\TimeUtility.hpp" />
     <ClInclude Include="Engine\Utility\Utility.hpp" />
@@ -222,7 +244,6 @@
     <ClInclude Include="Engine\Render\Lights\PointLight.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
     <None Include="Shaders\Common.hlsli" />
     <None Include="Shaders\Deferred\DeferredLighting.hlsli" />
     <None Include="Shaders\Deferred\Deferred_Common.hlsli">
@@ -304,14 +325,4 @@
     </FxCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets">
-    <Import Project="..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.targets" Condition="Exists('..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.targets')" />
-  </ImportGroup>
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.props'))" />
-    <Error Condition="!Exists('..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.targets'))" />
-  </Target>
 </Project>
