--- a/LowerDeck Engine/LowerDeck Engine.vcxproj
+++ b/LowerDeck Engine/LowerDeck Engine.vcxproj
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\Microsoft.Direct3D.D3D12.1.611.1\build\native\Microsoft.Direct3D.D3D12.props" Condition="Exists('..\packages\Microsoft.Direct3D.D3D12.1.611.1\build\native\Microsoft.Direct3D.D3D12.props')" />
   <Import Project="..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.props" Condition="Exists('..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.props')" />
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|x64">
@@ -233,6 +234,7 @@
     <ClInclude Include="Engine\Render\Lights\PointLight.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="Shaders\Common.hlsli" />
     <None Include="Shaders\Deferred\DeferredLighting.hlsli" />
     <None Include="Shaders\Deferred\Deferred_Common.hlsli">
@@ -316,6 +318,7 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.targets" Condition="Exists('..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.targets')" />
+    <Import Project="..\packages\Microsoft.Direct3D.D3D12.1.611.1\build\native\Microsoft.Direct3D.D3D12.targets" Condition="Exists('..\packages\Microsoft.Direct3D.D3D12.1.611.1\build\native\Microsoft.Direct3D.D3D12.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
@@ -323,5 +326,7 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.props'))" />
     <Error Condition="!Exists('..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\vcpkg.F.vcpkg.1.0.0\build\native\vcpkg.F.vcpkg.targets'))" />
+    <Error Condition="!Exists('..\packages\Microsoft.Direct3D.D3D12.1.611.1\build\native\Microsoft.Direct3D.D3D12.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Direct3D.D3D12.1.611.1\build\native\Microsoft.Direct3D.D3D12.props'))" />
+    <Error Condition="!Exists('..\packages\Microsoft.Direct3D.D3D12.1.611.1\build\native\Microsoft.Direct3D.D3D12.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Direct3D.D3D12.1.611.1\build\native\Microsoft.Direct3D.D3D12.targets'))" />
   </Target>
 </Project>
